# g-bot

./: .gitignore  GC_backtest_仕様書.md  GC_仕様書.md  GC_処理仕様書.md  GCipynb_仕様書.md  pyproject.toml  requirements.txt  仕様書.md
data/candles/: xrpjpy_1h_history.csv  xrpjpy_1h_history.parquet  xrpjpy_1h_latest.parquet  xrpjpy_5m_history.csv  xrpjpy_5m_history.parquet
data/candles/logs/: xrpjpy_1h_20250928_153652.csv  xrpjpy_1h_20250928_155920.csv  xrpjpy_1h_20250928_160505.csv  xrpjpy_1h_20250928_170502.csv  xrpjpy_1h_20250928_180510.csv  xrpjpy_1h_20250928_190511.csv  xrpjpy_1h_20250928_200504.csv  xrpjpy_1h_20250928_210502.csv  xrpjpy_1h_20250928_220505.csv  xrpjpy_1h_20250928_230504.csv  xrpjpy_1h_20250929_000502.csv  xrpjpy_1h_20250929_010505.csv  xrpjpy_1h_20250929_020502.csv  xrpjpy_1h_20250929_030505.csv  xrpjpy_1h_20250929_040503.csv  xrpjpy_1h_20250929_050506.csv  xrpjpy_1h_20250929_060503.csv  xrpjpy_1h_20250929_070506.csv  (+307 more)
data/metrics/: metrics.csv
data/state/: .tmp  state.json  state.json.bak
data/trades/: trades.csv
gc_bot/: __init__.py  backtest.py  cli.py  config.py  data.py  logging_utils.py  metrics.py  notifications.py  orders.py  runner.py  state.py  timeutils.py
gc_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gc_bot/strategies/: __init__.py  gc_rsi.py
logs/jsonl/: 20250928.jsonl  20251005.jsonl
notebooks/: GC.ipynb  GC_RSI_backtest.ipynb  GC_backtest.ipynb  GC_data_backfill.ipynb
scripts/: backfill_data.py  backfill_history.py  run_once.py  run_scheduler.py  test_real_trade.py
tests/: test_smoke.py  test_state.py
(+15 files in other folders)
